# managing-up

./: .gitignore  CHANGELOG.md  PRODUCT-DESIGN.md  README.md  docker-compose.yml  go.work  go.work.sum  package-lock.json  package.json
.playwright-mcp/: page-2026-04-06T06-04-04-776Z.yml  page-2026-04-06T06-05-00-944Z.yml
apps/api/: .env.example  Makefile  coverage.out  evaluator.coverage.out  gateway.coverage.out  go.mod  go.sum
apps/web/: middleware.ts  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
docs/: USER_MANUAL.md  agent-architecture.md  api-reference.md  architecture.excalidraw  backend-operations.md  data-model-schema-and-api.md  database-architecture.md  deployment.excalidraw  gap-analysis-2026-03-25.md  mvp-architecture.md  product-spec.md  project-analysis.md  session-context-2026-03-25.md  system-topology-and-service-boundaries.md  todo-plan.md  v2-er-diagram.excalidraw  v2-sequence-diagram.excalidraw
docs/plans/: 2025-05-19-frontend-ux-optimization.md  2026-03-31-llm-gateway-design.md  2026-03-31-llm-gateway-phase1-plan.md  2026-04-03-enterprise-ai-gateway-refactor.md  2026-04-07-review-findings-fix-plan.md  2026-04-08-agent-ecosystem-hub-design.md  2026-04-08-agent-ecosystem-hub-implementation-plan.md  2026-04-14-tool-call-fix-plan.md  2026-04-22-managing-up-v2-evolution-review-and-delivery-plan.md  2026-04-22-phase-0-implementation-plan.md  (+3 more)
sdk/: README.md  go.mod
sdk/python/: README.md  pyproject.toml
sdk/python/managing_up_sdk/: mcp.py
sdk/python/skill_hub/: __init__.py  client.py  errors.py  models.py
tmp/: 111.pcap
(+434 files in other folders)
